--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -49,7 +49,7 @@ The related functional drivers are:
 \end{itemize}
 
 \paragraph{Rationale}
-M1 was chosen because it has high priority and because a lot of high priority usecases are linked to M1. \todo{Beter uitschrijven.}
+M1 was chosen because it has high priority and because a lot of high priority usecases are linked to M1. Integrating a new sensor or actuator manufacturer is closely related to initialising and configuring the topology or any pluggable devices. For this reason, we chose M1, UC8, UC9, UC10 and UC13 as drivers. \todo{Beter uitschrijven.}
 
 \subsection{Architectural design}
 \paragraph{GatewayFacade for M1}
