--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -112,11 +112,40 @@ Provieds an interface to the \texttt{ApplicationManager} to consult the topology
 Responsible for keeping track of peripherals distributed over a certain geographic location. Also keeps track of the relationship between avaiable sensors and provides an overview of sensors that are not yet avaialable. Also provides an interface to the infrastructure owner to configure new devices.
 \begin{figure}[!htp]
 	\centering
-	\includegraphics[width=0.8\textwidth]{component_diagram.pdf}
-	%\missingfigure[figwidth=0.8\textwidth]{Component-and-connector diagram}
+	%\includegraphics[width=0.8\textwidth]{}
+	\missingfigure[figwidth=0.8\textwidth]{Component-and-connector diagram}
 	\caption{Component-and-connector diagram of this decomposition.
 	}\label{fig:it1-cc_main}
 \end{figure}
+Dus 
+\subsection{Interfaces for child modules}
+\subsubsection*{ModuleB}
+\begin{itemize}
+	\item InterfaceA
+	\begin{itemize}
+		\item \texttt{returnType operation1(ParamType param1)} throws TypeOfException
+		\begin{itemize}
+			\item Effect: Describe the effect of calling this operation.
+			\item Exceptions:
+			\begin{itemize}
+				\item TypeOfException: Describe when this exception is thrown.
+			\end{itemize}
+		\end{itemize}
+
+		\item \texttt{returnType operation2()}
+		\begin{itemize}
+			\item Effect: Describe the effect of calling this operation.
+			\item Exceptions: None
+		\end{itemize}
+	\end{itemize}
+\end{itemize}
+
+\subsection{Data type definitions}
+Describe per complex data type used in the interfaces what it represents.
+
+\paragraph{returnType} This data element represents X.
+
+\paragraph{ParamType} This data element represents Y.
 
 \subsection{Verify and refine}
 This section describes per component which (parts of) the remaining
@@ -216,10 +245,11 @@ The related functional drivers are:
 	\item \emph{UC5}: Uninstall mote
 	\item \emph{UC6}: Insert a pluggable device into a mote
 	\item \emph{UC7}: Remove a pluggable device from its mote
+	\item \epmp{UC14}: Send heartbeat
 \end{itemize}
 
 \paragraph{Rationale}
-U2 was chosen because it has a high priority. UC4, UC5, UC6, UC7 are all concerned with the installation of pluggables and are therefore tightly linked with U2. These 4 use cases all have high priority.
+U2 was chosen because it has a high priority. UC4, UC5, UC6, UC7 are all concerned with the installation of pluggables and are therefore tightly linked with U2. The 4 first use cases all have high priority. UC14 is connected to U2 because it is an essential part of the easy installation and tighly connected to possibility to reintroduce previously connected nodes.
 \subsection{Architectural design}
 \subsection{Instantiation and allocation of functionality}
 \subsection{Interfaces for child modules}
