Verify and refine changes

--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -270,8 +270,12 @@ The \texttt{GatewayFacade} gets extended with the functionality
 
 \paragraph{GatewayFacade}
 \begin{itemize}
-	\item \emph{Av3b}: Pluggable device/mote failure detection
 	\item \emph{UC11a}: Relay data from pluggable devices to the system
+\end{itemize}
+
+\paragraph{TopologyManager}
+\begin{itemize}
+	\item \emph{Av3b}: Pluggable device/mote failure detection
 \end{itemize}
 
 \paragraph{DataProcessingManager}
