--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -224,6 +224,12 @@ U2 was chosen because it has a high priority. UC4, UC5, UC6, UC7 are all concern
 \subsection{Architectural design}
 \paragraph{GatewayFacade for U2}
 The \texttt{GatewayFacade} gets extended with the functionality of also transmitting the other types of messages, more specifcally the connection message and the heartbeat. Again, the \texttt{GatewayFacade} is reponsible for relaying this data to the Online Service where it can be processed and used in the necessary contexts. Whenever a mote is connected or disconnected a corresponding message is sent automatically. Whenever pluggables get plugged in a connected mote, this new pluggable will be included in the next heartbeat sent by the mote.
+
+\paragraph{Installing new mote} 
+As specified in U2, installing a new mote should not require any more configuration than adding it to the topology. This is met using the \texttt{GatewayFacade} and the \texttt{ConnectionManager}. Whenever a new mote is installed it emits a connection message. This connection message is forwarded and checked against the history of previously installed motes. Since it is a new mote no configuration can be retreived and the mote is added to the topology as an 'uninitiliased' device waiting to be configured by the infrastructure owner. Thus the only configuration required is the action performed by the infrastructure owner, which is possible via the interface \texttt{ToplogyMgmt} (as stated in the first decomposition). Configuring acces rights is not a necessity and thus after this the new mote is installed.
+
+\paragraph{Reintroducing previously known mote - `Undo'ing the removal of the mote}
+As stated in U2 it should be possible to reintroduce motes, i.e. if a previously known and configure mote gets reintroduced to the system, it should automatically retreive its configuration and reinstate the correct acces rights. This approach is based on the undo tactic and can be achieved by adhering to the memento pattern. Even though this is not really a undo, rollback scenario in the hard sense of the word, it is still tightly related. The memento object in this case is stored in the \texttt{DeviceHistoryDB}. In this case the originator is the mote itself and the origin of change comes from the \texttt{ConnectionManager} which handles the connection message and thus wishes to reinstate the previously configured mote. Thus, in this case, the \texttt{DeviceHistoryManager} will check the \texttt{DeviceHistoryDB} and will put back the necessary assignments in the \texttt{AssignmentDB} as explained in the first decomposition. Afterwards, the topology history gets passed to the \texttt{TopologyManger} and the device will be added to its last known position in the topology. No further configuration is required.
 \subsection{Instantiation and allocation of functionality}
 \paragraph{Decomposition}
 Figure \ref{fig:it2-cc_main} shows the components resulting from the decomposition in this run. 
