Adding more and more

--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -228,8 +228,11 @@ The \texttt{GatewayFacade} gets extended with the functionality of also transmit
 \paragraph{Installing new mote} 
 As specified in U2, installing a new mote should not require any more configuration than adding it to the topology. This is met using the \texttt{GatewayFacade} and the \texttt{ConnectionManager}. Whenever a new mote is installed it emits a connection message. This connection message is forwarded and checked against the history of previously installed motes. Since it is a new mote no configuration can be retreived and the mote is added to the topology as an 'uninitiliased' device waiting to be configured by the infrastructure owner. Thus the only configuration required is the action performed by the infrastructure owner, which is possible via the interface \texttt{ToplogyMgmt} (as stated in the first decomposition). Configuring acces rights is not a necessity and thus after this the new mote is installed.
 
-\paragraph{Reintroducing previously known mote - `Undo'ing the removal of the mote}
+\paragraph{Reintroducing previously known mote - `Undo'-ing the removal of a mote}
 As stated in U2 it should be possible to reintroduce motes, i.e. if a previously known and configure mote gets reintroduced to the system, it should automatically retreive its configuration and reinstate the correct acces rights. This approach is based on the undo tactic and can be achieved by adhering to the memento pattern. Even though this is not really a undo, rollback scenario in the hard sense of the word, it is still tightly related. The memento object in this case is stored in the \texttt{DeviceHistoryDB}. In this case the originator is the mote itself and the origin of change comes from the \texttt{ConnectionManager} which handles the connection message and thus wishes to reinstate the previously configured mote. Thus, in this case, the \texttt{DeviceHistoryManager} will check the \texttt{DeviceHistoryDB} and will put back the necessary assignments in the \texttt{AssignmentDB} as explained in the first decomposition. Afterwards, the topology history gets passed to the \texttt{TopologyManger} and the device will be added to its last known position in the topology. No further configuration is required.
+
+\paragraph{Adding new sensors or actuators}
+The next requirement of U2 is that adding new sensors or actuators should not require more configuration than adding them to the topology. As we known, motes send periodic heartbeats containg a list of connected pluggable devices. Whenever a new pluggable (sensor or actuator) is connected, the next heartbeat emitted by the mote will be updated to contain the newly connected devices. The heartbeat message is transfered via the \texttt{GatewayFacade} which will use the \texttt{TopologyManger} to update the topology and place this new device. If the new device is connected to a mote that has been configured, the new device will receive the same location as the mote. If the device is plugged in in a not yet configured mote in the topology, it will remain 'idle' together with the mote. Whenever the mote gets configured by the infrastructure owner, the pluggable device will adhere the same location as the mote. 
 
 \subsection{Instantiation and allocation of functionality}
 \paragraph{Decomposition}
