Architectural design done. Thinking about alternatives

--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -232,7 +232,22 @@ As specified in U2, installing a new mote should not require any more configurat
 As stated in U2 it should be possible to reintroduce motes, i.e. if a previously known and configure mote gets reintroduced to the system, it should automatically retreive its configuration and reinstate the correct acces rights. This approach is based on the undo tactic and can be achieved by adhering to the memento pattern. Even though this is not really a undo, rollback scenario in the hard sense of the word, it is still tightly related. The memento object in this case is stored in the \texttt{DeviceHistoryDB}. In this case the originator is the mote itself and the origin of change comes from the \texttt{ConnectionManager} which handles the connection message and thus wishes to reinstate the previously configured mote. Thus, in this case, the \texttt{DeviceHistoryManager} will check the \texttt{DeviceHistoryDB} and will put back the necessary assignments in the \texttt{AssignmentDB} as explained in the first decomposition. Afterwards, the topology history gets passed to the \texttt{TopologyManger} and the device will be added to its last known position in the topology. No further configuration is required.
 
 \paragraph{Adding new sensors or actuators}
-The next requirement of U2 is that adding new sensors or actuators should not require more configuration than adding them to the topology. As we known, motes send periodic heartbeats containg a list of connected pluggable devices. Whenever a new pluggable (sensor or actuator) is connected, the next heartbeat emitted by the mote will be updated to contain the newly connected devices. The heartbeat message is transfered via the \texttt{GatewayFacade} which will use the \texttt{TopologyManger} to update the topology and place this new device. If the new device is connected to a mote that has been configured, the new device will receive the same location as the mote. If the device is plugged in in a not yet configured mote in the topology, it will remain 'idle' together with the mote. Whenever the mote gets configured by the infrastructure owner, the pluggable device will adhere the same location as the mote. 
+The next requirement of U2 is that adding new sensors or actuators should not require more configuration than adding them to the topology. As we known, motes send periodic heartbeats containg a list of connected pluggable devices. Whenever a new pluggable (sensor or actuator) is connected, the next heartbeat emitted by the mote will be updated to contain the newly connected devices. The heartbeat message is transfered via the \texttt{GatewayFacade} which will use the \texttt{TopologyManger} to update the topology and place this new device. If the new device is connected to a mote that has been configured, the new device will receive the same location as the mote. If the device is plugged in in a not yet configured mote in the topology, it will remain 'idle' together with the mote. Whenever the mote gets configured by the infrastructure owner, the pluggable device will adhere the same location as the mote.
+
+\paragraph{Automatic activation of applications}
+U2 states that applications should work out of the box if the required sensors and actuators are available. For this we introduced the \texttt{ApplicationActivator}. Whenever a new application is introduced to the system by an application provider, it is registered using the interface provided by the \texttt{ApplicationActivator} and stored in the \texttt{ApplicationActivationDB}, which keeps track of the current status of the application and the required sensors. As stated in the firs decomposition, the \texttt{ApplicationManager} can check the topology to find out whether the required sensors are yet available and if so, activates the application and marks the application as active in the \texttt{ApplicationActivationDB}. In the other case, when the required sensors are not yet all available, it is marked as 'not yet active' in the database. When new pluggables get introduced, the \texttt{TopologyManager} notifies the \texttt{ApplicationActivator} of this change and the \texttt{TopologyManager} checks whether there are applications waiting for this new device to become active and if so activates the application. The same goes for the other way around: whenever devices get disconnectedn, the \texttt{ApplicationActivator} checks the \texttt{ApplicationActivationDB} and deactivates applications, if necessary. This way the responsibility of keeping track of non-active applications and the (de)activation of the applications is clearly seperated.
+
+\paragraph{Install and uninstall mote}
+As specified in UC4 and UC5 it must be easy to install and uninstall motes. For the installation part, the mote must become active and activate any applications requiring this new device. This is described in the previous paragrpahs and is covered by the modules in our decomposition. Likewise for UC5 where a mote gets uninstalled: the disconnection of the mote could trigger the deactivation of applications and has as effect that the mote gets listed as inactive in the topology. This is a joint effort provided by the \texttt{TopologyManager} which notifies the \texttt{ApplicationActivator} of the change which in its turn deactivates the applications depending on it and the \texttt{TopologyManager} also changes the \texttt{Topology} accordingly.
+
+\paragraph{Inserting and removing pluggable device}
+UC6 and UC7 specify the ability of inserting and removing pluggable devices. As explained in the previous paragraphs it's the responsibility of the \texttt{TopologyManger} and the \texttt{ApplicationActivator} to register the devices with the topolgy. If the configuration was previously known, no further action is needed from an external actor. If not, the device gets listed as 'inactive' and waits for the necessary actor to configure the device. If applications were waiting for this device, the \texttt{ApplicationActivator} automatically activates the applications. 
+
+\paragraph{Send heartbeat}
+As specified in UC14 a heartbeat is sent periodically by the motes including a list of sensors and actuators connected to it. As specified in the previous paragraphs (more specifically in 'Adding new sensors or actuators'), it is the responsibility of the \texttt{TopologyManger} and the \texttt{ApplicationActivator} to respectively modify the topology and acitvate (or deactivate) the related applications.
+
+\paragraph{Alternatives considered}
+\subparagraph{•}
 
 \subsection{Instantiation and allocation of functionality}
 \paragraph{Decomposition}
