Added result part. arch

--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -360,56 +360,14 @@ When it receives a message from the \texttt{TopologyManager} (when the \texttt{T
 \chapter{Resulting partial architecture}\label{sec:architecture}
 This section provides an over of the architecture constructed through ADD\@.
 
-\section{Context diagram}
-This subsection discusses the context diagram.
-
 \begin{figure}[!htp]
 	\centering
-	%\includegraphics[width=0.8\textwidth]{}
-	\missingfigure[figwidth=0.8\textwidth]{Context diagram for component-and-
-		connector view.}
-	\caption{Context diagram for the component-and-connector view.
-	}\label{fig:cc_context}
+	\includegraphics[angle=90,width=0.8\textwidth]{result_arch.pdf}
+	%\missingfigure[figwidth=0.8\textwidth]{Component-and-connector diagram}
+	\caption{Component-and-connector diagram of the resulting partial architecture}.
+	\label{fig:result-arch}
 \end{figure}
 
-\section{Component-and-connector view}
-A short discussion of the component-and-connector view with the key
-decompositions if any.
-
-\begin{figure}[!htp]
-	\centering
-	%\includegraphics[width=0.8\textwidth]{}
-	\missingfigure[figwidth=0.8\textwidth]{Component-and-connector diagram}
-	\caption{Primary diagram for the component-and-connector view.
-	}\label{fig:cc_main}
-\end{figure}
-
-\begin{figure}[!htp]
-	\centering
-	%\includegraphics[width=0.8\textwidth]{}
-	\missingfigure[figwidth=0.8\textwidth]{Key decomposition}
-	\caption{Decomposition of a component shown in Figure~\ref{fig:cc_main}
-	}\label{fig:decomp_decomp1}
-\end{figure}
-
-\section{Deployment view}
-A short discussion of the allocation of components to physical nodes based on a
-context diagram and a deployment diagram.
-
-\begin{figure}[!htp]
-	\centering
-	%\includegraphics[width=0.8\textwidth]{}
-	\missingfigure[figwidth=0.8\textwidth]{Context diagram for the allocation
-		view.}
-	\caption{Context diagram for the allocation view.}\label{fig:depl_context}
-\end{figure}
-
-\begin{figure}[!htp]
-	\centering
-	%\includegraphics[width=0.8\textwidth]{}
-	\missingfigure[figwidth=0.8\textwidth]{Deployment diagram}
-	\caption{Primary diagram for the allocation view.}\label{fig:depl_main}
-\end{figure}
 
 
 \end{document}
